<resources>
    <string name="app_name">AndroidInternAssignment3</string>

    <!--Facebook login details-->
    <string name="facebook_app_id">1046135772824692</string>
    <string name="fb_login_protocol_scheme">fb1046135772824692</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="create_an_n_account">Create an \n Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_hint">9876543210</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="social">Social</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="sign_in">Sign In!</string>
    <string name="sign_in_into_your_n_account">SignIn into your \n Account</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="or_login_with">Login with</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="pleaseWaitTxt">Please wait ...</string>
    <string name="home">HOME</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="best_sellers">BEST SELLERS</string>
    <string name="back_to_the_city">TOP OFFERS</string>
    <string name="more_to_love">MORE TO LOVE</string>

</resources>