<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginviewmodel"
            type="com.connect.androidinternassignment3.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.Login">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="40dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="40dp" />

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/sign_in_into_your_n_account"
                    android:textColor="@color/red"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtLoginEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/text4"
                    app:layout_constraintTop_toBottomOf="@+id/text4" />

                <EditText
                    android:id="@+id/edtLoginEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:text="@={loginviewmodel.email}"
                    android:hint="@string/johndoe_gmail_com"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="@+id/txtLoginEmail"
                    app:layout_constraintRight_toRightOf="@+id/guideline4"
                    app:layout_constraintTop_toBottomOf="@+id/txtLoginEmail" />


                <TextView
                    android:id="@+id/txtLoginPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/txtLoginEmail"
                    app:layout_constraintTop_toBottomOf="@+id/edtLoginEmail" />

                <EditText
                    android:id="@+id/edtLoginPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:text="@={loginviewmodel.password}"
                    app:layout_constraintLeft_toLeftOf="@+id/txtLoginPassword"
                    app:layout_constraintRight_toRightOf="@+id/guideline4"
                    app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />


                <ImageView
                    android:id="@+id/hideLoginPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:src="@drawable/ic_outline_lock_24"
                    app:layout_constraintBottom_toBottomOf="@+id/edtLoginPassword"
                    app:layout_constraintRight_toRightOf="@+id/edtLoginPassword"
                    app:layout_constraintTop_toTopOf="@+id/edtLoginPassword" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    android:fontFamily="@font/ubuntu_bold"
                    app:layout_constraintRight_toRightOf="@+id/edtLoginPassword"
                    app:layout_constraintTop_toBottomOf="@+id/edtLoginPassword" />

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/or_login_with"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintRight_toRightOf="@+id/edtLoginPassword"
                    app:layout_constraintLeft_toLeftOf="@+id/txtLoginEmail"
                    app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

                <LinearLayout
                    android:id="@+id/linear_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="@id/text5"
                    app:layout_constraintRight_toRightOf="@id/text5"
                    app:layout_constraintTop_toBottomOf="@+id/text5" >

                    <ImageView
                        android:id="@+id/google_login"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="20dp"
                        android:padding="5dp"
                        android:background="@drawable/image_background"
                        android:src="@drawable/google_icon"/>

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/facebook_login"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:layout_marginStart="20dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout2"
                    app:layout_constraintRight_toRightOf="@id/guideline4">

                    <TextView
                        android:id="@+id/text6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textStyle="bold"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_now"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:textSize="12.5sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:visibility="visible"
            android:onClick="@{loginviewmodel::onLoginClick}"
            android:background="@drawable/button_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:visibility="gone"
            android:indeterminateTint="@color/red"
            app:layout_constraintLeft_toLeftOf="@+id/login"
            app:layout_constraintRight_toRightOf="@+id/login"
            app:layout_constraintBottom_toBottomOf="@+id/login"
            app:layout_constraintTop_toTopOf="@+id/login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>