<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="com.connect.androidinternassignment3.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/silver"
        tools:context=".ui.fragment.SignUp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/register"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="40dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="40dp" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/create_an_n_account"
                    android:textColor="@color/red"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="@+id/guideline1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/text1"
                    app:layout_constraintTop_toBottomOf="@+id/text1" />

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:hint="John doe"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:text="@={loginViewModel.name}"
                    app:layout_constraintLeft_toLeftOf="@+id/txtName"
                    app:layout_constraintRight_toRightOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/txtName" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/edtName"
                    app:layout_constraintTop_toBottomOf="@+id/edtName" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/johndoe_gmail_com"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:text="@={loginViewModel.email}"
                    app:layout_constraintLeft_toLeftOf="@+id/txtEmail"
                    app:layout_constraintRight_toRightOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

                <TextView
                    android:id="@+id/txtContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingStart="10dp"
                    android:text="Contact no"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/edtEmail"
                    app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

                <LinearLayout
                    android:id="@+id/linear_layout1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="@+id/txtContact"
                    app:layout_constraintRight_toRightOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/txtContact">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="3dp" />

                    <EditText
                        android:id="@+id/edtContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_baseline_phone_24"
                        android:drawablePadding="10dp"
                        android:hint="@string/contact_hint"
                        android:text="@={loginViewModel.phone}"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingStart="10dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/linear_layout1"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout1" />


                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="*********"
                    android:text="@={loginViewModel.password}"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    app:layout_constraintLeft_toLeftOf="@+id/txtpassword"
                    app:layout_constraintRight_toRightOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/txtpassword" />

                <ImageView
                    android:id="@+id/hidePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:src="@drawable/ic_outline_lock_24"
                    app:layout_constraintBottom_toBottomOf="@+id/edtPassword"
                    app:layout_constraintRight_toRightOf="@+id/edtPassword"
                    app:layout_constraintTop_toTopOf="@+id/edtPassword" />

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/red"
                    app:layout_constraintLeft_toLeftOf="@+id/edtPassword"
                    app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I agree with"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toRightOf="@+id/checkbox"
                    app:layout_constraintTop_toTopOf="@+id/checkbox"
                    app:layout_constraintBottom_toBottomOf="@+id/checkbox" />

                <TextView
                    android:id="@+id/tern_and_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="term &amp; condition"
                    android:textColor="@color/red"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toRightOf="@+id/text2"
                    app:layout_constraintTop_toTopOf="@+id/checkbox"
                    app:layout_constraintBottom_toBottomOf="@+id/checkbox" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/red"
                    app:layout_constraintTop_toBottomOf="@+id/tern_and_condition"
                    app:layout_constraintLeft_toLeftOf="@+id/tern_and_condition"
                    app:layout_constraintRight_toRightOf="@id/tern_and_condition" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="@+id/checkbox"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox"
                    app:layout_constraintRight_toRightOf="@id/guideline2">

                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:id="@+id/sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:textSize="12.5sp"
                        app:layout_constraintLeft_toRightOf="@+id/text3"
                        app:layout_constraintTop_toTopOf="@+id/text3"
                        app:layout_constraintRight_toRightOf="@+id/guideline2" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="@color/white"
            android:text="@string/register"
            android:visibility="visible"
            android:onClick="@{loginViewModel::onRegisterClick}"
            android:background="@drawable/button_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/register_progress"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:visibility="gone"
            android:indeterminateTint="@color/red"
            app:layout_constraintLeft_toLeftOf="@+id/register"
            app:layout_constraintRight_toRightOf="@+id/register"
            app:layout_constraintBottom_toBottomOf="@+id/register"
            app:layout_constraintTop_toTopOf="@+id/register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>